--- a/assets/css/Styles.css
+++ b/assets/css/Styles.css
@@ -1,14 +1,14 @@
 /*==================== GOOGLE FONTS ====================*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 /*==================== VARIABLES CSS ====================*/
 :root {
     --header-height: 3rem;
 
     /*========== Colors ==========*/
-    /* Change favorite color */
-    --hue-color: 250;
-    /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    /* favorite color */
+    --hue-color: 230;
+    /*HSL Color W3*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
