--- a/assets/css/Styles.css
+++ b/assets/css/Styles.css
@@ -8,7 +8,7 @@
     /*========== Colors ==========*/
     /* favorite color */
     --hue-color: 230;
-    /*HSL Color W3*/
+    /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
