update about section

--- a/assets/css/Styles.css
+++ b/assets/css/Styles.css
@@ -299,7 +299,7 @@ img {
 }
 
 .home__scroll {
-    /* display: none */
+    display: none
 }
 
 .home__scroll-button {
@@ -335,11 +335,30 @@ img {
     font-weight: var(--font-medium);
 }
 
+.button:hover {
+    background-color: var(--first-color-alt);
+}
+
+.button__icon {
+    font-size: 1.25rem;
+    margin-left: var(--mb-0-5);
+    transition: .3s;
+}
+
+.button--flex {
+    display: inline-flex;
+    align-items: center;
+}
+
 /*==================== BUTTONS ====================*/
 
 
 /*==================== ABOUT ====================*/
-
+.about__img {
+    width: 200px;
+    border-radius: .5rem;
+    justify-self: center;
+}
 
 /*==================== SKILLS ====================*/
 
